Changed color to mails buttons and links [Missing 2024 Banner] (#291)
* Changed color to mails buttons and links

* Changed mail closing link from FB to IG

* Added travel closing message only to relevant emails

* Added new mail header

---------

Co-authored-by: Adri <119002051+AdriMM26@users.noreply.github.com>

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -8,7 +8,7 @@
     <title>{{ subject }}</title>
     <style type="text/css">
 	a {
-	    color: #BEB771;
+	    color: #7F27A2;
 	    text-decoration: none;
 	    -webkit-transition: all .1s linear;
 	    -moz-transition: all .1s linear;
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: #67622f;
+	    color: #7F27A2;
 	    text-decoration: none;
 	}
 
@@ -102,12 +102,12 @@
             }
 
             .btn-primary table td:hover {
-                background-color: #67622f !important;
+                background-color: #410658 !important;
             }
 
             .btn-primary a:hover {
-                background-color: #67622f !important;
-                border-color: #67622f !important;
+                background-color: #410658 !important;
+                border-color: #410658 !important;
             }
         }
     </style>
