--- a/app/templates/mails/include/email_button.html
+++ b/app/templates/mails/include/email_button.html
@@ -9,9 +9,9 @@
                    style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
                 <tbody>
                 <tr>
-                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#BEB771;border-radius:5px;text-align:center; margin: 0 auto;">
+                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#7F27A2;border-radius:5px;text-align:center; margin: 0 auto;">
                         <a href="{{ url }}" target="_blank"
-                           style="text-decoration:underline;border:solid 1px #BEB771;border-radius:5px;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#BEB771;color:#ffffff;">
+                           style="text-decoration:underline;border:solid 1px #7F27A2;border-radius:5px;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#7F27A2;color:#ffffff;">
                             {{ text }}
                         </a>
                     </td>
