--- a/applications/templates/mails/invitation_mentor_message.html
+++ b/applications/templates/mails/invitation_mentor_message.html
@@ -19,5 +19,5 @@
     {% include 'mails/include/email_button.html' with text='Confirm' url=confirm_url %}
     {% include 'mails/include/cancel.html' %}
     {% include 'mails/include/arrival_departure_info.html' %}
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="false"%}
 {% endblock %}
