--- a/applications/templates/mails/invitation_volunteer_message.html
+++ b/applications/templates/mails/invitation_volunteer_message.html
@@ -26,5 +26,5 @@
         </p>
     {% endif %}
     {% include 'mails/include/arrival_departure_info.html' %}
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="false"%}
 {% endblock %}
