--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -11,5 +11,5 @@
     <p>
     If you need an invite letter for your visa, send us a email to reimbursements@hackupc.com with your full name, university name and passport number, as shown in your passport or if you have any questions, don't hesitate to contact us.
     </p>
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="false"%}
 {% endblock %}
