--- a/user/templates/mails/password_reset_message.html
+++ b/user/templates/mails/password_reset_message.html
@@ -13,6 +13,6 @@
     </p>
     <p style="text-align: center;">{{ reset_url|urlize }}</p>
 
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="false"%}
 
 {% endblock %}
