--- a/app/templates/mails/include/closing.html
+++ b/app/templates/mails/include/closing.html
@@ -1,19 +1,22 @@
 <p>
     Have any other questions? Email us at {{ h_contact_email|urlize }}
-    {% if h_fb or h_tw %}
+    {% if h_ig or h_tw %}
         or message us on
-        {% if h_fb %}
+        {% if h_ig %}
             {% if h_tw %}
-                <a href="https://facebook.com/{{ h_fb }}" target="_blank">Facebook</a>
-                and
+                <a href="https://instagram.com/{{ h_ig }}" target="_blank">Instagram</a>
+                or
                 <a href="https://twitter.com/{{ h_tw }}" target="_blank">Twitter</a>.
             {% else %}
-                <a href="https://facebook.com/{{ h_fb }}" target="_blank">Facebook</a>.
+                <a href="https://instagram.com/{{ h_ig }}" target="_blank">Instagram</a>.
             {% endif %}
         {% elif h_tw %}
             <a href="https://twitter.com/{{ h_tw }}" target="_blank">Twitter</a>.
         {% endif %}
     {% endif %}
 </p>
+{% if travel == "true" %}
+    <p>If you have any questions regarding Travel Reimbursments, please reach us out at <a href="mailto:reimbursements@hackupc.com">reimbursements@hackupc.com</a>.</p>
+{% endif %}
 <p>We hope to see you at {{ h_name }}!</p>
 <p>Best, {{ h_name }} Team.</p>
