--- a/applications/templates/mails/invitation_hacker_message.html
+++ b/applications/templates/mails/invitation_hacker_message.html
@@ -24,5 +24,5 @@
         </p>
     {% endif %}
     {% include 'mails/include/arrival_departure_info.html' %}
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="true"%}
 {% endblock %}
