--- a/user/templates/mails/verify_email_message.html
+++ b/user/templates/mails/verify_email_message.html
@@ -6,5 +6,5 @@
     <p>You have 5 days to verify your email address for your account at {{ h_name }}.</p>
     {% include 'mails/include/email_button.html' with text='Verify' url=activate_url %}
 
-    {% include 'mails/include/closing.html' %}
+    {% include 'mails/include/closing.html' with travel="true"%}
 {% endblock %}
