--- a/applications/templates/mails/include/cancel.html
+++ b/applications/templates/mails/include/cancel.html
@@ -1,7 +1,28 @@
-<p>If you cannot make it, please let us know by clicking "Cancel".</p>
+<p>If you cannot make it, please let us know by clicking the "Cancel" button.</p>
 {% if is_hacker %}
     <p>We want as many people as possible to experience the hackathon!</p>
 {% endif %}
-<p style="text-align: center">
-    <a href="{{ cancel_url }}">Cancel</a>
-</p>
+<table border="0" cellpadding="0" cellspacing="0"
+       class="btn btn-primary"
+       style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;box-sizing:border-box;width:100%;">
+    <tbody>
+    <tr>
+        <td align="center"
+            style="font-family:sans-serif;font-size:14px;vertical-align:top;padding-bottom:15px;">
+            <table border="0" cellpadding="0" cellspacing="0"
+                   style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
+                <tbody>
+                <tr>
+                    <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#7F27A2;border-radius:5px;text-align:center; margin: 0 auto;">
+                        <a href="{{ cancel_url }}" target="_blank"
+                           style="text-decoration:underline;border:solid 1px #7F27A2;border-radius:5px;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#7F27A2;color:#ffffff;">
+                            Cancel
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
+</table>
