--- a/applications/templates/mails/invitation_hacker_message.html
+++ b/applications/templates/mails/invitation_hacker_message.html
@@ -5,15 +5,15 @@
     <p>
         Congratulations {{ name }}, you have been officially invited to <b>{{ h_name }}</b>!
     </p>
-    <p>
-        Respond to this invitation by clicking on the "Confirm" link below.
-        <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
-            hacker on the waitlist.</b>
-    </p>
-    <p>
-      After clicking, you will be redirected to our site and asked to confirm your dietary requirements, travel reimbursement amount and t-shirt size. We need to make sure that information’s right!
-    </p>
     {% include 'mails/include/email_button.html' with text='Review & Confirm' url=confirm_url %}
+    <p>
+        Confirm your spot by clicking on the "Confirm" link above within <b>5 days of receiving this email</b>. 
+        Otherwise we will give your spot to another hacker on the waitlist.
+    </p>
+    <p>
+      After clicking, you will be redirected to our site and asked to confirm your dietary requirements, travel reimbursement amount and t-shirt size. We need to make sure that the information is right!
+    </p>
+    
     {% include 'mails/include/cancel.html' %}
     {% if reimb.waitlisted %}
         {% include 'include/waitlisted_reimbursement.html' %}
