Added disclaimer to migrate halal to veggie

--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -146,6 +146,7 @@
                             {% include 'include/deadline_countdown.html' with timeleft=invite_timeleft %}</b>
                     </p>
                     <p>Please confirm that this information regarding your application is correct. If you see that something's not right, now is the time to change it!</p>
+                    <p><b>Disclaimer:</b> We cannot guarantee that the meat provided at the event will be Halal. We strongly advise to consider opting for a vegatarian diet instead.</p>
                     {% include 'include/bootstrap_form.html' with form=confirm_form %}
                     <script src="{% static 'js/form_modifiers.js' %}"></script>
                     <script>
